# loitsu

./: Cargo.toml  README.md
asset-gen/: Cargo.toml
asset-gen/src/: lib.rs
cli/: Cargo.toml
cli/player/: index.html  loitsu-web.js
cli/src/: asset_builder.rs  main.rs  shard_gen.rs
editor/: .gitignore  Cargo.toml  build-debug.ps1  build-debug.sh  build.ps1  build.sh
editor/server/: Cargo.toml  build.rs
editor/server/src/: main.rs  overrides.rs
editor/src/: hierarchy.rs  main.rs
editor/web/: index.html  package.json  pnpm-lock.yaml
editor/web/src/: App.css  App.tsx  index.css  index.tsx
editor/web/src/components/: FileExplorer.module.css  FileExplorer.tsx  Hierarchy.module.css  Hierarchy.tsx  Inspector.module.css  Inspector.tsx  Notifications.module.css  Notifications.tsx  PanelTitle.module.css  PanelTitle.tsx  TopBar.module.css  TopBar.tsx
examples/: basic.rs
examples/basic/: Cargo.toml
examples/basic/assets/scenes/: main.scene.json  second.scene.json
examples/basic/assets/scripts/: Hello_World.rn  Other.rn
examples/basic/src/: main.rs
loitsu/: Cargo.toml
loitsu-cli/: Cargo.toml
loitsu-cli/player/: index.html  loitsu-web.js
loitsu-cli/src/: asset_builder.rs  main.rs  shard_gen.rs
loitsu-editor/: Cargo.toml  build.ps1
loitsu-editor/server/: Cargo.toml  build.rs
loitsu-editor/server/src/: main.rs  overrides.rs
loitsu-editor/src/: hierarchy.rs  main.rs
loitsu-editor/web/: index.html
loitsu-editor/web/src/: App.css  App.tsx  index.css  index.tsx
loitsu-editor/web/src/components/: FileExplorer.module.css  FileExplorer.tsx  Hierarchy.module.css  Hierarchy.tsx  Inspector.module.css  Inspector.tsx  TopBar.module.css  TopBar.tsx
loitsu/src/: lib.rs
loitsu/src/asset_management/: asset.rs  asset_meta.rs  asset_reference.rs  get_file.rs  image_asset.rs  mod.rs  parse.rs  shard.rs  static_shard.rs  texture_asset.rs
loitsu/src/ecs/: mod.rs
loitsu/src/editor/: mod.rs
loitsu/src/input/: mod.rs  mouse.rs
loitsu/src/logging/: mod.rs
loitsu/src/rendering/: core.rs  desktop.rs  drawable.rs  mod.rs  shader.rs  web.rs
loitsu/src/rendering/drawable/: debug.rs  mod.rs  sprite.rs
loitsu/src/rendering/shaders/: debug.wgsl  sprite.wgsl
loitsu/src/scene_management/: mod.rs
loitsu/src/scripting/: mod.rs  rune.rs  rune_runtime.rs
loitsu/src/scripting/scripts/: builtin.rn
loitsu/src/util/: id.rs  mod.rs  random.rs  scaling.rs
loitsu/src/web/: mod.rs
loitsu/src/window/: core.rs  desktop.rs  mod.rs  web.rs
player/: index.html
src/: lib.rs
src/scripting/: lua.rs  mod.rs
