[package]
name = "loitsu"
version = "0.1.0"
edition = "2021"
authors = ["Amos Peltonen"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
pollster = "0.3.0"
wgpu = "0.17.1"
winit = "0.28.7"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
