[workspace]

members = [
    "loitsu",
    "editor",
    "editor/server",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.4.3"
edition = "2021"
authors = ["Amos Peltonen"]

[workspace.dependencies]
env_logger = "0.11"
rune = {version = "0.13", features = ["disable-io"]}
winit = "0.29"
raw-window-handle = "0.6.0"
bitcode = "0.5.1"
lazy_static = "1.4.0"
image = "0.25.0"
bitflags = "2.4"
bytemuck = {version = "1.14", features = ["derive"]}
cgmath = "0.18"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
serde_json = "1.0"
serde = "1.0"
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"
walkdir = "2.5"
colored = "2.1.0"
