[package]
name = "loitsu-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "loitsu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
cargo_toml = "0.19.1"
chrono = "0.4.31"
loitsu = { path = "../loitsu", features = ["scene_generation", "json_preference_parse", "disable_common_ecs_methods"] }
checksumdir = "0.3.0"
colored.workspace = true
loitsu-asset-gen = { path = "../asset-gen" }
warp.workspace = true
tokio.workspace = true
walkdir.workspace = true
serde_json.workspace = true
image.workspace = true
