[package]
name = "loitsu-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
loitsu = { path = "../loitsu", features = ["editor"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.39"
serde_json = "1.0.108"
serde = "1.0"

[profile.release]
lto = true
