[package]
name = "loitsu-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
loitsu = { path = "../loitsu", features = ["editor"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde_json.workspace = true
serde.workspace = true

[profile.release]
lto = true
