[package]
name = "loitsu-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loitsu = { path = "../loitsu", features = ["editor"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.39"
serde_json = "1.0.108"

[profile.release]
lto = true
