[package]
name = "loitsu"
version = "0.2.0"
edition = "2021"
authors = ["Amos Peltonen"]

[features]
scene_generation = ["dep:serde_json", "dep:serde"]
json_preference_parse = ["dep:serde_json", "dep:serde"]
disable_common_ecs_methods = []
editor = ["disable_common_ecs_methods", "scene_generation", "direct_asset_management"]
direct_asset_management = []

[dependencies]
env_logger = "0.10.0"
pollster = "0.3.0"
rune = {version = "0.13.1", features = ["disable-io"]}
winit = "0.28.7"
raw-window-handle = "0.6.0"
serde_json = {version = "1.0", optional = true}
serde = {version = "1.0", optional = true}
bitcode = "0.5.0"
uuid = {version = "1.5.0", features = ["v4", "fast-rng"]}
lazy_static = "1.4.0"
image = "0.24.7"
bitflags = "2.4.1"
bytemuck = {version = "1.14.0", features = ["derive"]}
cgmath = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.39"
web-sys = {version = "0.3.64", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"]}
wgpu = {version = "0.18.0", features = ["webgl"]}
js-sys = "0.3.64"
zstd = {version = "0.13", features = ["wasm", "thin"]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.18.0"
zstd = "0.13"
instant = "0.1"
tokio = { version = "1.0", features=["full"]}
colored = "2.0.4"
futures = "0.3.29"
