[package]
name = "loitsu"
version = "0.4.1"
edition = "2021"
authors = ["Amos Peltonen"]

[features]
scene_generation = ["dep:serde_json", "dep:serde"]
json_preference_parse = ["dep:serde_json", "dep:serde"]
disable_common_ecs_methods = []
editor = ["disable_common_ecs_methods", "scene_generation", "direct_asset_management"]
direct_asset_management = []

[dependencies]
env_logger.workspace = true
rune.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
serde_json = {version = "1.0", optional = true}
serde = {version = "1.0", optional = true}
bitcode.workspace = true
lazy_static.workspace = true
image.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
cgmath.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = {version = "0.3.64", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"]}
wgpu = {version = "0.19.1", default-features = false, features = ["webgl", "wgsl"]}
js-sys = "0.3.64"
zstd = {version = "0.13", features = ["wasm", "thin"]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.19.1"
zstd = "0.13"
instant = "0.1"
tokio.workspace = true
futures = "0.3.29"
colored.workspace = true
