[package]
name = "loitsu-editor-server"
version = "0.4.0"
edition = "2021"
authors = ["Amos Peltonen"]

[[bin]]
name = "loitsu-editor"
path = "src/main.rs"

[dependencies]
warp = "0.3.6"
tokio = { version = "1.36", features = ["full"] }
loitsu = { path = "../../loitsu", features = ["json_preference_parse"] }
serde_json = "1.0.108"
walkdir = "2.4.0"
image = "0.24.7"
loitsu-asset-gen = { path = "../../asset-gen" }
bitcode = "0.5.1"
