[package]
name = "loitsu-editor-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "loitsu-editor"
path = "src/main.rs"

[dependencies]
loitsu = { path = "../../loitsu", features = ["json_preference_parse"] }
walkdir.workspace = true
loitsu-asset-gen = { path = "../../asset-gen" }
warp.workspace = true
tokio.workspace = true
serde_json.workspace = true
image.workspace = true
bitcode.workspace = true
