[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loitsu = { path = "../../loitsu" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.64"
wasm-bindgen = "0.2.87"

[profile.release]
lto = true
